--- a/package.json
+++ b/package.json
@@ -10,10 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native/new-app-screen": "0.81.1",
+    "@react-navigation/drawer": "^7.5.8",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.26",
     "react": "19.1.0",
     "react-native": "0.81.1",
-    "@react-native/new-app-screen": "0.81.1",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "^4.16.0",
+    "react-native-sqlite-storage": "^6.0.1",
+    "react-native-svg": "^15.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -28,6 +37,8 @@
     "@react-native/typescript-config": "0.81.1",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
+    "@types/react-native": "^0.72.8",
+    "@types/react-native-sqlite-storage": "^6.0.5",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
